Fix index.html menu card image width -Increase flex-basis to 100% to force items to wrap, -This will allow image to scale but not affect cards on other pages

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -266,7 +266,7 @@ main {
 }
 .card__img {
   border-radius: 1rem 1rem 0 0;
-  flex: 1 80%;
+  flex: 1 100%;
   object-fit: cover;
   height: 15rem;
 }
