--- a/styles/scss/components/_card.scss
+++ b/styles/scss/components/_card.scss
@@ -23,7 +23,7 @@
 
 	&__img {
 		border-radius: 1rem 1rem 0 0;
-		flex: 1 80%;
+		flex: 1 100%;
 		object-fit: cover;
 		height: 15rem;
 	}
